# Neo

./: .gitignore  CMakeLists.txt  Doxyfile  main.cpp
html/: annotated.html  annotated_dup.js  array_8hpp_source.html  classes.html  classneo_1_1array-members.html  classneo_1_1array.html  classneo_1_1ndarray-members.html  classneo_1_1ndarray.html  classneo_1_1shape__obj-members.html  classneo_1_1shape__obj.html  classneo_1_1tensor-members.html  classneo_1_1tensor.html  classneo_1_1tensor.js  dir_67a1ef42729cc10b4e506d0937c5be5e.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_de1d559ee29b9529c3eb971659538ce1.html  dir_f89abcb304c928c7d889aa5625570de5.html  dir_fecfe773f908b91c373e1f72e381ab2e.html  error_8hpp_source.html  files.html  functions.html  functions_func.html  index.html  navtreedata.js  navtreeindex0.js  ndarray_8hpp_source.html  neo_8hpp_source.html  operations_8hpp_source.html  structs_8hpp_source.html  tensor_8hpp_source.html
inc/: array.hpp  neo.hpp
include/: array.hpp  error.hpp  functions.hpp  ndarray.hpp  neo.hpp  operations.hpp  structs.hpp  tensor.hpp
latex/: annotated.tex  array_8hpp_source.tex  classneo_1_1array.tex  classneo_1_1ndarray.tex  classneo_1_1shape__obj.tex  classneo_1_1tensor.tex  error_8hpp_source.tex  files.tex  ndarray_8hpp_source.tex  neo_8hpp_source.tex  operations_8hpp_source.tex  refman.tex  structs_8hpp_source.tex  tensor_8hpp_source.tex
src/: array.cpp  operations.cpp  structs_ostream.cpp
(+10 files in other folders)
